moved to new nexus credentials object

--- a/boilerplates/jupyter-notebook/Jenkinsfile
+++ b/boilerplates/jupyter-notebook/Jenkinsfile
@@ -24,7 +24,7 @@ odsPipeline(
   ]
 ) { context ->
   patchBuildConfig(context)
-  stageStartOpenshiftBuild(context)
+  stageStartOpenshiftBuild(context, [nexusHostWithBasicAuth: context.nexusHostWithBasicAuth])
   stageDeployToOpenshift(context)
 }
 
