DSI-16 added changes to ods

--- a/boilerplates/ds-ml-service/Jenkinsfile
+++ b/boilerplates/ds-ml-service/Jenkinsfile
@@ -4,10 +4,10 @@ def final componentId = '@component_id@'
 def final credentialsId = "${projectId}-cd-cd-user-with-password"
 def sharedLibraryRepository
 def dockerRegistry
-def trainingRoute
-def trainingPodInfo
-def trainingPassword
-def trainingUsername
+def training_route
+def training_pod_info
+def training_password
+def training_username
 
 def trainingConfig = [
     "docker-training"  : "${componentId}-training-service",
@@ -27,13 +27,7 @@ library identifier: 'ods-library@production', retriever: modernSCM(
         remote       : sharedLibraryRepository,
         credentialsId: credentialsId])
 
-/*
-  See readme of shared library for usage and customization
-  @ https://github.com/opendevstack/ods-jenkins-shared-library/blob/master/README.md
-  eg. to create and set your own builder slave instead of 
-  the python slave used here - the code of the python slave can be found at
-  https://github.com/opendevstack/ods-project-quickstarters/tree/master/jenkins-slaves/python
- */ 
+// See readme of shared library for usage and customization.
 odsPipeline(
     image: "${dockerRegistry}/cd/jenkins-slave-python",
     projectId: projectId,
@@ -44,27 +38,38 @@ odsPipeline(
         '*'     : 'dev'
     ]
 ) { context ->
-    stageUnitTests(context)
-    stageBuild(context)
     stageScanForSonarqube(context)
+    stageBuild(context)
     stageStartMultipleOpenshiftBuild(context, "Build Training Image" ,trainingConfig)
     stageMultipleDeployToOpenshift(context, "Deploy Training Pod", trainingConfig)
+    stageUnitTestsTraining(context)
     stageTraining(context)
-    stageIntegrationTest(context)
+    stageIntegrationTestTraining(context)
     stageStartMultipleOpenshiftBuild(context, "Build Prediction Image", predictionConfig)
     stageMultipleDeployToOpenshift(context, "Deploy Prediction Pod", predictionConfig)
 }
 
-def stageUnitTests(def context) {
-    stage('Unit Tests') {
-        withEnv(["NEXUS_USERNAME=${context.nexusUsername}",
-        "NEXUS_URL=${context.nexusHost}",
-        "NEXUS_PASSWORD=${context.nexusPassword}"]) {
-            sh 'pip install -i https://$NEXUS_USERNAME:$NEXUS_PASSWORD@${NEXUS_URL:8}/repository/pypi-all/simple -r src/requirements.txt --user'
-            sh 'PYTHONPATH=src python3 -m unittest discover -s test/unittests -t .'
+def stageLinter(def context) {
+    stage('Linter') {
+        // PEP8
+        sh '''
+pycodestyle --show-source --show-pep8 src/*
+pycodestyle --statistics -qq src/*
+  '''
+    }
+}
+
+
+def stageUnitTestsTraining(def context) {
+    stage('Unittests') {
+        training_pod_info = sh(returnStdout: true, script:"sleep 5 && oc get pods --sort-by=.status.startTime --no-headers -n ${context.targetProject} | grep ${context.componentId}-training-service | tail -n1").trim().split(/\s+/)
+        print("Found pod name: ${training_pod_info[0]}")
+        if (training_pod_info[2] == "Running") {
+            sh(returnStdout: true, script: " oc project ${context.targetProject} && oc exec ${training_pod_info[0]} bash ./run_unittests.sh ")
         }
     }
 }
+
 
 def stageBuild(def context) {
     stage('Prepare Docker Builds') {
@@ -74,34 +79,33 @@ def stageBuild(def context) {
 
 def stageTraining(def context) {
     stage('Train Model') {
-        trainingRoute = "http://localhost:8080" // using fixed internal value localhost:8080 since port-forwarding is being used
-        while(true) {
-            trainingPodInfo = sh(returnStdout: true, script:"sleep 5 && oc get pods --sort-by=.status.startTime --no-headers -n ${context.targetProject} | grep ${context.componentId}-training-service | tail -n1").trim().split(/\s+/)
-            print("Found pod name: ${trainingPodInfo[0]}")
-            if (trainingPodInfo[2] == "Running") {
-                print("Pod ${trainingPodInfo[0]} is running!!!")
-                break
-            }
-            print("Pod ${trainingPodInfo[0]} is still not running...")
-        }
+        sh(returnStdout: true, script:"pip install -i ${context.nexusHostWithBasicAuth}/repository/pypi-all/simple requests --user")
 
-        trainingPassword = sh(returnStdout: true, script:"oc get secret ${context.componentId}-training-secret -o jsonpath='{.data.password}' -n ${context.targetProject}").trim()
-        trainingUsername = sh(returnStdout: true, script:"oc get secret ${context.componentId}-training-secret -o jsonpath='{.data.username}' -n ${context.targetProject}").trim()
-        trainingPassword = sh(returnStdout: true, script:"echo \"${trainingPassword}\" | base64 --decode").trim()
-        trainingUsername = sh(returnStdout: true, script:"echo \"${trainingUsername}\" | base64 --decode").trim()
+        training_route = "http://localhost:8080"
 
-        sh "oc port-forward ${trainingPodInfo[0]} 8080 -n ${context.targetProject} &"
-        sh "python3 jenkinsfile_helper.py --training-service ${trainingRoute} --username \"${trainingUsername}\" --password \"${trainingPassword}\""
+        training_password = sh(returnStdout: true, script:"oc get secret ${context.componentId}-training-secret -o yaml -n ${context.targetProject} | grep password: | cut -d':' -f2 ").trim()
+        training_username = sh(returnStdout: true, script:"oc get secret ${context.componentId}-training-secret -o yaml -n ${context.targetProject} | grep username: | cut -d':' -f2 ").trim()
+        training_password = sh(returnStdout: true, script:"echo \"${training_password}\" | base64 --decode").trim()
+        training_username = sh(returnStdout: true, script:"echo \"${training_username}\" | base64 --decode").trim()
+
+        sh "oc port-forward ${training_pod_info[0]} 8080 -n ${context.targetProject} &"
+        sh "pip install requests"
+        sh  "python3 jenkinsfile_helper.py --training-service ${training_route} --username \"${training_username}\" --password \"${training_password}\""
     }
 }
 
-def stageIntegrationTest(def context) {
-    stage('Prediction Integration Test') {
-        withEnv(["DSI_TRAINING_BASE_URL=${trainingRoute}","DSI_TRAINING_SERVICE_USERNAME=${trainingUsername}","DSI_TRAINING_SERVICE_PASSWORD=${trainingPassword}"]) {
-            sh 'PYTHONPATH=src python3 -m unittest discover -s test/integration_tests -t .'
+
+def stageIntegrationTestTraining(def context) {
+    stage('Integration Tests') {
+        training_pod_info = sh(returnStdout: true, script:"sleep 5 && oc get pods --sort-by=.status.startTime --no-headers -n ${context.targetProject} | grep ${context.componentId}-training-service | tail -n1").trim().split(/\s+/)
+        print("Found pod name: ${training_pod_info[0]}")
+        if (training_pod_info[2] == "Running") {
+            sh(returnStdout: true, script: " oc project ${context.targetProject} && oc exec ${training_pod_info[0]} bash ./run_integration_tests.sh ")
         }
+        print("Pod ${training_pod_info[0]} is not running... cannot execute integration tests")
     }
 }
+
 
 def stageStartMultipleOpenshiftBuild(def context, def stageName, def buildConfigs = null) {
     if (buildConfigs != null) {
@@ -130,9 +134,7 @@ private void patchBuildConfig(def context, def componentId = null) {
         context.tagversion
     }"},
     {"op": "replace", "path": "/spec/strategy/dockerStrategy", "value":{"buildArgs":[
-        {"name": "NEXUS_URL" ,"value": "${context.nexusHost}"},
-        {"name": "NEXUS_USERNAME" ,"value": "${context.nexusUsername}"},
-        {"name": "NEXUS_PASSWORD" ,"value": "${context.nexusPassword}"}]}},
+        {"name": "nexusHostWithBasicAuth" ,"value": "${context.nexusHostWithBasicAuth}"}]}},
     ]' -n ${context.targetProject}"""
 }
 
@@ -155,5 +157,14 @@ def stageMultipleDeployToOpenshift(def context, def stageName, def buildConfigs 
         }
     } else {
         stageDeployToOpenshift(context)
+    }
+    while(true) {
+    training_pod_info = sh(returnStdout: true, script:"sleep 5 && oc get pods --sort-by=.status.startTime --no-headers -n ${context.targetProject} | grep ${context.componentId}-training-service | tail -n1").trim().split(/\s+/)
+    print("Found pod name: ${training_pod_info[0]}")
+    if (training_pod_info[2] == "Running") {
+        print("Pod ${training_pod_info[0]} is running!!!")
+        break
+    }
+    print("Pod ${training_pod_info[0]} is still not running...")
     }
 }
