--- a/boilerplates/jupyter-notebook/files/docker/Dockerfile
+++ b/boilerplates/jupyter-notebook/files/docker/Dockerfile
@@ -1,74 +1,40 @@
 # This image provides a jupyter notebook setup
-FROM ubuntu:16.04
+
+FROM registry.access.redhat.com/rhscl/python-36-rhel7
 
 MAINTAINER "Stefan Klingelschmitt" <stefan.klingelschmitt@boehringer-ingelheim.com>
 
-EXPOSE 8080
+ARG nexusHostWithBasicAuth
 
-# Add Cloudera apt repo for the hive jdbc driver
-RUN apt-key adv --fetch-keys http://archive.cloudera.com/cdh5/ubuntu/xenial/amd64/cdh/archive.key && \
-    echo 'deb [arch=amd64] http://archive.cloudera.com/cdh5/ubuntu/xenial/amd64/cdh xenial-cdh5 contrib' > /etc/apt/sources.list.d/cloudera.list
+WORKDIR /app
 
-ENV localedef -i en_US -f UTF-8 en_US.UTF-8
-ENV LANG=C.UTF-8
-ENV PYTHON_VERSION=3.5 \
-    PATH=$HOME/.local/bin/:/opt/app-root/src/:$PATH \
-    PYTHONUNBUFFERED=1 \
-    PYTHONIOENCODING=UTF-8 \
-    PIP_NO_CACHE_DIR=off
-ENV SHELL /bin/bash
+ENV PYTHONPATH=$PYTHONPATH:/app
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential \
-    curl \
-    ssh \
-    git \
-    vim \
-    wget \
-    less \
-    libnss-wrapper \
-    gfortran \
-    liblapack-dev \
-    pkg-config \
-    python3 \
-    python3-pip \
-    python3-setuptools \
-    python3-dev \
-    libkrb5-dev \
-    rsync \
-    software-properties-common \
-    unzip \
-    python3-virtualenv \
-    libsasl2-dev \
-    postgresql postgresql-contrib \
-    # needed for hive connection
-    default-jre \
-    hive-jdbc \
-    libssl-dev libcurl4-openssl-dev libssl-dev && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+COPY requirements.txt /app
 
-RUN pip3 install --upgrade pip==9.0.1 &&  \
-    pip3 install virtualenv --upgrade
+USER 1001
+# From load pip install for caching docker build layers
+# Front load pip install for caching docker build layers
+RUN if [[ ! -z ${nexusHostWithBasicAuth} ]]; \
+    then  pip install -i ${nexusHostWithBasicAuth}/repository/pypi-all/simple --upgrade pip && pip install -i ${nexusHostWithBasicAuth}/repository/pypi-all/simple -r requirements.txt; \
+    else pip install --upgrade pip && pip install -r requirements.txt; \
+    fi
 
 
-ENV LANG=C.UTF-8
+USER root
 
-RUN virtualenv /opt/app-root -p /usr/bin/python3
-
-COPY run.sh /opt/app-root/src/
-COPY requirements.txt /opt/app-root/src/
+COPY run.sh /app/run.sh
 COPY jupyter_notebook_config.json /opt/app-root/src/.jupyter/jupyter_notebook_config.json
 
-
-WORKDIR /opt/app-root/src/
-
-# In order to drop the root user, we have to make some directories world
-# writable as OpenShift default security model is to run the container under
-# random UID.
-RUN chown -R 1001:0 /opt/app-root && chmod -R ug+rwx /opt/app-root
+RUN chgrp -R 0 /app && \
+    chmod -R g=u /app && \
+    chmod +x /app/run.sh && \
+    chmod g+w /etc/passwd
 
 USER 1001
 
-# Set the default CMD to print the usage of the language image.
-CMD ["./run.sh"]
+
+EXPOSE 8080
+
+ENTRYPOINT [ "/app/run.sh" ]
+
