Generate default component environment in openshift folder of generated project.
Requires https://github.com/opendevstack/ods-jenkins-shared-library/pull/85

replace upload-templates.sh with tailor #38

Change summary:

- Use yml format allowing exec with multiple lines in code.
- New templates are in ocp_templates/ocp-config/ and
  configuration in
  ods-configuration/ods-project-quickstarters/templates
- Provide rundeck jobs for testing ending in <original-name>-qs-38.yaml
- Improved consistency of rshiny label usage.
  This allows better specificity of tailor commands.
- Remove namespace entries in templates which appear to not
  be needed.

Scripts in ocp-templates/scripts:
- create-projects.sh exits when invoked with unknown parameter
- Some scripts support a -d|--debug flag which causes
  -v to be used in tailor invocations.
- Some scripts support a --status command so that tailor status is used.
- Extract portion of create-projects.sh into create-cd-jenkins.sh for
  easier testability.
- Better output log message.

--- a/ocp-templates/ocp-config/component-environment/svc.yml
+++ b/ocp-templates/ocp-config/component-environment/svc.yml
@@ -2,10 +2,8 @@ apiVersion: v1
 kind: Template
 labels:
   template: component-template
-  app: '${PROJECT}'
+  app: '${PROJECT}-${COMPONENT}'
   branch: '${BRANCH}'
-  component: '${COMPONENT}'
-  env: '${ENV}'
 objects:
   - apiVersion: v1
     kind: Service
@@ -21,10 +19,8 @@ objects:
           protocol: TCP
           targetPort: 8080
       selector:
-        app: '${PROJECT}'
-        component: '${COMPONENT}'
+        app: '${PROJECT}-${COMPONENT}'
         deploymentconfig: '${COMPONENT}'
-        env: '${ENV}'
       sessionAffinity: None
       type: ClusterIP
 parameters:
