--- a/ocp-templates/ocp-config/component-environment/dc.yml
+++ b/ocp-templates/ocp-config/component-environment/dc.yml
@@ -2,10 +2,8 @@ apiVersion: v1
 kind: Template
 labels:
   template: component-template
-  app: '${PROJECT}'
+  app: '${PROJECT}-${COMPONENT}'
   branch: '${BRANCH}'
-  component: '${COMPONENT}'
-  env: '${ENV}'
 objects:
   - apiVersion: v1
     kind: DeploymentConfig
@@ -15,10 +13,8 @@ objects:
       replicas: 1
       revisionHistoryLimit: 10
       selector:
-        app: '${PROJECT}'
-        component: '${COMPONENT}'
+        app: '${PROJECT}-${COMPONENT}'
         deploymentconfig: '${COMPONENT}'
-        env: '${ENV}'
       strategy:
         activeDeadlineSeconds: 21600
         resources: {}
@@ -32,8 +28,7 @@ objects:
       template:
         metadata:
           labels:
-            app: '${PROJECT}'
-            component: '${COMPONENT}'
+            app: '${PROJECT}-${COMPONENT}'
             deploymentconfig: '${COMPONENT}'
             env: '${ENV}'
         spec:
