--- a/ocp-templates/ocp-config/component-environment/is.yml
+++ b/ocp-templates/ocp-config/component-environment/is.yml
@@ -2,9 +2,7 @@ apiVersion: v1
 kind: Template
 labels:
   template: component-template
-  app: '${PROJECT}'
-  component: '${COMPONENT}'
-  env: '${ENV}'
+  app: '${PROJECT}-${COMPONENT}'
 objects:
   - apiVersion: v1
     kind: ImageStream
