--- a/boilerplates/be-python-flask/sonar-project.properties
+++ b/boilerplates/be-python-flask/sonar-project.properties
@@ -12,3 +12,9 @@ sonar.language=py
 
 # Encoding of the source files (optional but recommended as default is ASCII)
 sonar.sourceEncoding=UTF-8
+
+# Exclude test files from coverage analysis
+sonar.coverage.exclusions=src/tests/**
+
+# Define coverage information inside the python project
+sonar.python.coverage.reportPaths=src/tests/coverage.xml
