--- a/rundeck-jobs/common/prepare-continuous-integration-rshiny-qs-38.yaml
+++ b/rundeck-jobs/common/prepare-continuous-integration-rshiny-qs-38.yaml
@@ -44,13 +44,26 @@
   sequence:
     commands:
     - description: clone quickstarter project
-      exec: mkdir /tmp/rundeck_${job.id}_${job.execid} && cd  /tmp/rundeck_${job.id}_${job.execid} && git clone ${globals.bitbucket_sshhost}/opendevstack/ods-project-quickstarters && cd ods-project-quickstarters && git checkout origin/task/tailor-for-update-templates
-    - description: create rshiny app in openshift
-      jobref:
-        args: -project_id ${option.project_id} -component_id ${option.component_id} -git_url_http ${option.git_url_http}
-        group: openshift
-        name: create-rshiny-qs-38
-        nodeStep: 'true'
+      exec: >-
+        mkdir /tmp/rundeck_${job.id}_${job.execid} &&
+        cd  /tmp/rundeck_${job.id}_${job.execid} &&
+        git clone ${globals.bitbucket_sshhost}/opendevstack/ods-project-quickstarters.git &&
+        cd ods-project-quickstarters &&
+        git checkout origin/task/tailor-for-update-templates
+    - description: clone oc config project
+      exec: >-
+        cd /tmp/rundeck_${job.id}_${job.execid} &&
+        git clone ${globals.bitbucket_sshhost}/opendevstack/ods-configuration.git &&
+        cd ods-configuration &&
+        git checkout origin/task/tailor-for-update-templates
+    - description: setup openshift folder in generated project.
+      # This is used by the shared library to call  tailor to create/update OpenShift resources.
+      script: |-
+        cd /tmp/rundeck_@job.id@_@job.execid@/ods-project-quickstarters/
+        PROJECT="@option.project_id@" \
+        COMPONENT="@option.component_id@" \
+        TARGET_DIR="@option.quickstarter_directory@" \
+        /tmp/rundeck_@job.id@_@job.execid@/ods-project-quickstarters/boilerplates/rshiny-openshift/init-rshiny-openshift.sh
     - description: add Jenkinsfile to generated project
       script: |-
         sudo chown @globals.rundeck_os_user@ -R @option.quickstarter_directory@
