--- a/boilerplates/rshiny-openshift/openshift/rshiny-secrets.yml
+++ b/boilerplates/rshiny-openshift/openshift/rshiny-secrets.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Template
 labels:
   template: rshiny-secrets
+  app: '${PROJECT}-${COMPONENT}'
 parameters:
 - description: Authentication Crowd user
   displayName: crowd user
