publish unit test results towards SonarQube and Jenkins even when tests are failing

--- a/boilerplates/be-python-flask/sonar-project.properties
+++ b/boilerplates/be-python-flask/sonar-project.properties
@@ -16,5 +16,8 @@ sonar.sourceEncoding=UTF-8
 # Exclude test files from coverage analysis
 sonar.coverage.exclusions=src/tests/**
 
+# Define unit test information inside the python project
+sonar.python.xunit.reportPath=src/tests/nosetests.xml
+
 # Define coverage information inside the python project
 sonar.python.coverage.reportPaths=src/tests/coverage.xml
