remove code no longer needed

--- a/rundeck-jobs/common/prepare-continuous-integration-rshiny-qs-38.yaml
+++ b/rundeck-jobs/common/prepare-continuous-integration-rshiny-qs-38.yaml
@@ -1,6 +1,6 @@
 - defaultTab: summary
   description: |-
-    TEST- Setup Jenkins and openshift and push to github
+    TEST- Setup Jenkins pipeline to process openshift when building pushed bitbucket repo.
 
     Testing for [Replace upload-templates.sh with tailor · Issue #38 · opendevstack/ods-project-quickstarters](https://github.com/opendevstack/ods-project-quickstarters/issues/38)
   executionEnabled: true
