--- a/rundeck-jobs/common/prepare-continuous-integration.yaml
+++ b/rundeck-jobs/common/prepare-continuous-integration.yaml
@@ -1,4 +1,4 @@
-- description: 'Setup Jenkins pipeline and openshift and push to bitbucket '
+- description: 'Setup Jenkins pipeline to process openshift when building pushed bitbucket repo.'
   executionEnabled: true
   group: common
   id: ffa290f1-eaa0-4f7b-92fe-1f1c169b6349
@@ -7,7 +7,7 @@
   nodeFilterEditable: false
   options:
   - description: |-
-      the type of component to create (i.e. springboot-be, angular-frontend). 
+      the type of component to create (i.e. springboot-be, angular-frontend).
       The component type must be created first in the quickstarter project
     enforced: true
     name: component_type
@@ -49,17 +49,19 @@
     commands:
     - description: clone quickstarter project
       exec: mkdir /tmp/rundeck_${job.id}_${job.execid} && cd  /tmp/rundeck_${job.id}_${job.execid} && git clone ${globals.bitbucket_sshhost}/opendevstack/ods-project-quickstarters.git && cd ods-project-quickstarters && git checkout origin/production
-    - description: create component in openshift
-      jobref:
-        args: -project_id ${option.project_id} -component_id ${option.component_id} -git_url_http ${option.git_url_http}
-        group: openshift
-        name: create-component
-        nodeStep: 'true'
+    - description: setup openshift folder in generated project if not provided.
+      # This is used by the shared library to call  tailor to create/update OpenShift resources.
+      script: |-
+        cd /tmp/rundeck_@job.id@_@job.execid@/ods-project-quickstarters/
+        PROJECT="@option.project_id@" \
+        COMPONENT="@option.component_id@" \
+        TARGET_DIR="@option.quickstarter_directory@" \
+        /tmp/rundeck_@job.id@_@job.execid@/ods-project-quickstarters/boilerplates/init-openshift.sh
     - description: add Jenkinsfile to generated project
       script: |-
         sudo mkdir -p @option.quickstarter_directory@
         sudo chown @globals.rundeck_os_user@ -R @option.quickstarter_directory@
-        cd /tmp/rundeck_@job.id@_@job.execid@/ods-project-quickstarters/boilerplates 
+        cd /tmp/rundeck_@job.id@_@job.execid@/ods-project-quickstarters/boilerplates
         ./renderJenkinsTemplate.sh \
           --target @option.quickstarter_directory@/Jenkinsfile \
           --url @option.git_url_http@ \
