--- a/rundeck-jobs/openshift/create-projects.master.yaml
+++ b/rundeck-jobs/openshift/create-projects.master.yaml
@@ -1,42 +1,38 @@
 - defaultTab: summary
-  description: 'creates an openshift rshiny component (for project bhw and component
-    bhw-be: bhw-be)'
+  description: 'creates the openshift projects (for bhw: bhw-cd, bhw-dev, bhw-test)'
   executionEnabled: true
   group: openshift
-  id: ba36276e-5018-47b7-8f3f-9ec8e648d04f
+  id: 00f767ef-347f-480e-8ad3-bf2aed3abf5d
   loglevel: INFO
-  name: create-rshiny
+  name: create-projects
   nodeFilterEditable: false
   options:
   - description: the global project id (i.e. bhw for basic hello world)
     name: project_id
-    required: true
-  - description: the id of the component to create
-    name: component_id
     required: true
   - description: openshift token to log on to openshift
     name: openshift_api_token
     secure: true
     storagePath: keys/openshift-api-token
     valueExposed: true
-  - description: git http url for the component to create
-    name: git_url_http
-    required: true
+  - description: the admin of the project, must be the openshift username
+    name: project_admin
+  - description: the groups with special entitlements, key value pairs with semicolon, can be null than everyone can edit
+    name: project_groups
   scheduleEnabled: true
   sequence:
     commands:
     - description: echo input parameters
-      exec: 'echo project_id: ${option.project_id}, component_id: ${option.component_id},
-        route: ${option.route}, git_url_http: ${option.git_url_http}'
+      exec: 'echo project_id: ${option.project_id} openshift_api_token: bb${option.openshift_api_token}bb'
     - description: create tmp dir for job
       exec: mkdir /tmp/rundeck_${job.id}_${job.execid}
     - description: clone oc script project
       exec: cd /tmp/rundeck_${job.id}_${job.execid} && git clone ${globals.bitbucket_sshhost}/opendevstack/ods-project-quickstarters.git && cd ods-project-quickstarters && git checkout origin/production
     - description: create docker container for openshift client
       exec: cd /tmp/rundeck_${job.id}_${job.execid}/ods-project-quickstarters/ocp-templates && sudo docker build --build-arg OC_IP=${globals.openshift_apihost_lookup} -t oc .
-    - description: create openshift rshiny app cd project
-      exec: cd /tmp/rundeck_${job.id}_${job.execid}/ods-project-quickstarters/ocp-templates  && sudo docker run --rm oc /bin/bash -c 'oc login ${globals.openshift_apihost} --token=${option.openshift_api_token} && oc project cd && ./create-rshiny-app.sh -p ${option.project_id} -c "${option.component_id}" -b "${option.git_url_http}"'
+    - description: create openshift projects (dev / test / cd with jenkins)
+      exec: cd /tmp/rundeck_${job.id}_${job.execid}/ods-project-quickstarters/ocp-templates  && sudo docker run --rm oc /bin/bash -c "oc login ${globals.openshift_apihost} --token=${option.openshift_api_token} && ./create-projects.sh -p ${option.project_id} -n ${globals.nexus_host} -a ${option.project_admin} -e ${option.project_groups}"
     keepgoing: false
     strategy: node-first
-  uuid: ba36276e-5018-47b7-8f3f-9ec8e648d04f
+  uuid: 00f767ef-347f-480e-8ad3-bf2aed3abf5d
 
