Using bash set -ux and exit on unknown parameter. Remove unused params. debugging: use shared library feature/tailor-deploy-debug remove unused bc-docker and use TAGVERSION in component-environment/bc.yml

--- a/ocp-templates/ocp-config/component-environment/bc.yml
+++ b/ocp-templates/ocp-config/component-environment/bc.yml
@@ -19,7 +19,7 @@ objects:
     output:
       to:
         kind: ImageStreamTag
-        name: ${COMPONENT}:latest
+        name: ${COMPONENT}:${TAGVERSION}
     postCommit: {}
     resources: {}
     runPolicy: Serial
@@ -43,4 +43,8 @@ parameters:
 - description: The environment stage.
   displayName: Environment
   name: ENV
+  required: true
+- description: The version to be used .
+  displayName: Environment
+  name: TAGVERSION
   required: true
